[gd_scene load_steps=12 format=2]

[ext_resource path="res://attacks/super_attack/sattack11/attack.gd" type="Script" id=1]
[ext_resource path="res://custom_classes/periodic.gd" type="Script" id=3]
[ext_resource path="res://sprites/battle/eye_flash.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 13, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 26, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 39, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 52, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 65, 0, 13, 13 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 78, 0, 13, 13 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), null ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="destroy" type="Timer" parent="."]
one_shot = true

[node name="Periodic" type="Node" parent="."]
script = ExtResource( 3 )

[node name="eye_flash_left" type="AnimatedSprite" parent="."]
position = Vector2( 300, 75 )
frames = SubResource( 12 )
frame = 7
playing = true

[node name="eye_flash_right" type="AnimatedSprite" parent="."]
position = Vector2( 340, 75 )
frames = SubResource( 12 )
frame = 7
playing = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="destroy" to="." method="_on_destroy_timeout"]
